# EchoMap

./: .gitignore  README.md  pyproject.toml
src/echomap/: __init__.py  api.py  app.py  backends.py  cli.py  db.py  models.py
src/echomap/services/: __init__.py  archaeology.py  comparison.py  discovery.py  fingerprint.py  insights.py  live.py  public_intelligence.py  relationship.py  reporting.py  reports.py  scanner.py
src/echomap/ui/: command_palette.py  graph_view.py  main_window.py  panels.py
tests/: test_api.py  test_archaeology.py  test_backend.py  test_cli.py  test_discovery.py  test_live_events.py  test_live_sync.py  test_scanner.py  test_workspace.py
